--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -3240,12 +3240,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('glassdoor_jobs_cleaned.csv',index=False)"
+    "df.to_csv('cleaned_glassdoor_jobs.csv',index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
